kustomize/apiserver-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuberay-apiserver
  labels:
    app.kubernetes.io/name: kuberay-apiserver
    app.kubernetes.io/instance: kuberay-lab
    app.kubernetes.io/part-of: kuberay
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: kuberay-apiserver
      app.kubernetes.io/instance: kuberay-lab
      app.kubernetes.io/part-of: kuberay
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: kuberay-apiserver
        app.kubernetes.io/instance: kuberay-lab
        app.kubernetes.io/component: kuberay-apiserver
        app.kubernetes.io/part-of: kuberay
    spec:
      containers:
        - name: kuberay-apiserver
          image: quay.io/kuberay/apiserver:v1.2.2
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8888
              protocol: TCP
            - name: grpc
              containerPort: 8887
              protocol: TCP
          resources:
            limits:
              cpu: 300m
              memory: 300Mi
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
            timeoutSeconds: 1
