kustomize/operator-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuberay-operator
  labels:
    app.kubernetes.io/name: kuberay-operator
    app.kubernetes.io/instance: kuberay-lab
    app.kubernetes.io/part-of: kuberay
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kuberay-operator
    app.kubernetes.io/instance: kuberay-lab
    app.kubernetes.io/part-of: kuberay
