kustomize/services.yaml
---
# KubeRay Operator Service.
apiVersion: v1
kind: Service
metadata:
  name: kuberay-operator
  labels:
    app.kubernetes.io/name: kuberay-operator
    app.kubernetes.io/instance: kuberay-ray
    app.kubernetes.io/component: kuberay-operator
    app.kubernetes.io/part-of: kuberay
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: kuberay-operator
    app.kubernetes.io/instance: kuberay-ray
    app.kubernetes.io/part-of: kuberay
---
# KubeRay API Server Service.
apiVersion: v1
kind: Service
metadata:
  name: kuberay-apiserver
  annotations:
    prometheus.io/path: /metrics
    prometheus.io/scrape: "true"
    prometheus.io/port: "8888"
  labels:
    app.kubernetes.io/name: kuberay-apiserver
    app.kubernetes.io/instance: kuberay-ray
    app.kubernetes.io/component: kuberay-apiserver
    app.kubernetes.io/part-of: kuberay
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8888
      protocol: TCP
      targetPort: 8888
    - name: rpc
      port: 8887
      protocol: TCP
      targetPort: 8887
  selector:
    app.kubernetes.io/name: kuberay-apiserver
    app.kubernetes.io/instance: kuberay-ray
    app.kubernetes.io/part-of: kuberay
